2019-12-23  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c (FTDemo_Display_Print): Fix compiler warning.

2019-12-23  Noel Benzinger  <noelbenzinger@gmail.com>

	* src/Jamfile (Library): Add `mlgetopt.c' as a dependency (#57466).

2019-09-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Standalone stroker test.

	* src/string.c (dinkus_init): Stroke an open path.
	(main, Render_String): Use it.

2019-09-27  Werner Lemberg  <wl@gnu.org>

	* src/ftdump.c (Print_Programs): Check glyf offset and length.

	Problem reported by Marc Schönefeld <marc.schoenefeld@gmx.org>.

2019-09-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftbench.c (test_stroke): Implement stroker test.
	(FT_BENCH_STROKE, bench_desc, main): Register it.

2019-09-20  Werner Lemberg  <wl@gnu.org>

	* graph/x11/grx11.c (gr_x11_surface_init): Initialize `xswa'.

	This removes two valgrind warnings about

	  Conditional jump or move depends on uninitialised value(s)

2019-08-27  Werner Lemberg  <wl@gnu.org>

	* Makefile (PLATFORM==unixdev): Add `libbrotlidec'.

	This is needed for the new WOFF2 support.

2019-07-01  Werner Lemberg  <wl@gnu.org>

	* Version 2.10.1 released.
	==========================


	Tag sources with `VER-2-10-1.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2019-07-01  Werner Lemberg  <wl@gnu.org>

	* graph/x11/grx11.c (gr_x11_surface_init): Fix C++ warnings.

2019-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (bitmap_scale): Gray alternative to LCD bitmap...
	(Process_Event): ... after repeated bitmap toggles.

2019-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Tweak direct rendering.

	* src/ftcommon.c (FT_Demo_Sketch_Glyph_Color): Redefine surface origin
	and clipping box instead of shifting outline.
	* src/ftgrid.c (grid_status_draw_outline): Tweaked.
	* graph/gblspans.h: Simplify.
	* graph/grobjs.h (grSurface): Introduce `origin' byte.
	* graph/gblblit.c: Silence compilation warning.
