@@ -1,3 +1,13 @@
+2020-03-08  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	[ftdump] Show max-advance width/height and underline info.
+
+	Also reformat output to account for these wider labels.
+
+	* src/ftdump.c (Name_Field): New function.
+	(Print_Number_Type): New macro.
+	(Print_Name, Print_Type, main): Updated.
+
 2019-12-23  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftcommon.c (FTDemo_Display_Print): Fix compiler warning.
